# Vencord-Launcher

./: .gitignore  README.md  build.bat  pyproject.toml  uninstall.py
.github/workflows/: release.yml
data/: config.json
src/: main.py  vencord_launcher.py
src/config/: __init__.py  config.py  config_loader.py
src/discord/: discord_finder.py  discord_launcher.py
src/utilities/: autostart_manager.py  exe_info.py  log_formatters.py  process_runner.py
src/vencord/: vencord_checker.py  vencord_installer.py
